--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ html, body {
     align-items: center;
     justify-content: center;
     column-gap: 50px;
-    height: 100%;
+    height: 825px;
     width: 100%;
     margin-left: 12%;
 }
@@ -55,4 +55,19 @@ ul {
     padding: 0;
     margin: 5px;
     margin-left: 0px;
+}
+
+.aboutPage {
+    height: 825px;
+    background-color: aqua;
+}
+
+.expPage {
+    height: 825px;
+    background-color: gold;
+}
+
+.contactPage {
+    height: 825px;
+    background-color: grey;
 }
