--- a/src/styles.css
+++ b/src/styles.css
@@ -24,9 +24,9 @@ html, body {
     align-items: center;
     justify-content: center;
     column-gap: 50px;
-    height: 825px;
+    height: 100vh;
     width: 100%;
-    margin-left: 12%;
+    margin-left: 5%;
 }
 
 .name{
@@ -58,16 +58,40 @@ ul {
 }
 
 .aboutPage {
-    height: 825px;
+    height: 100vh;
     background-color: aqua;
 }
 
 .expPage {
-    height: 825px;
+    height: 100vh;
     background-color: gold;
 }
 
+
+/* -------------------------------------CONTACT PAGE-------------------------------------- */
+
+
 .contactPage {
-    height: 825px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     background-color: grey;
 }
+
+label {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    text-align: right;
+    width: 400px;
+    line-height: 26px;
+    margin-bottom: 10px;
+  }
+  
+  input {
+    height: 20px;
+    flex: 0 0 200px;
+    margin-left: 10px;
+  }
